# fcrud

./: .gitignore  Dockerfile  README.md  cookies.txt  env.sh  fly.toml  pyproject.toml  requirements.txt  study.ipynb  test.db  tls2pots2db.ipynb
notebook/: space-track.ipynb
src/fcrud/: main.py
src/fcrud/echo/: ping.py
src/fcrud/model/: airflow.py  alarm.py  orbit.py  owner.py  rocket.py  satellite.py
src/fcrud/utils/: macgyver_knife.py  settings.py  space_track.py
tests/: test_macgyver_knife.py  test_space_track.py
