[project]
name = "fcrud"
version = "0.3.0"
description = "fastapi-crudrouter + FastApi"
authors = [{ name = "pysatellite", email = "pysatellite@gmail.com" }]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0.post1",
    "fastapi-crudrouter>=0.8.6",
    "pydantic==1.10.13",
    "databases>=0.8.0",
    "aiosqlite>=0.19.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
devrun = "uvicorn src.fcrud.main:app --reload --port 8000"

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.3"]
