[project]
name = "fcrud"
version = "0.3.0"
description = "fastapi-crudrouter + FastApi"
authors = [{ name = "pysatellite", email = "pysatellite@gmail.com" }]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0.post1",
    "fastapi-crudrouter>=0.8.6",
    "pydantic==1.10.13",
    "databases>=0.8.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "psycopg2>=2.9.9",
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
rundev = "uvicorn src.fcrud.main:app --reload --port 8000"
proxydb = "fly proxy 5432 -a fcrud-db"

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.3"]
